--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-DATABASE_URL="postgresql://postgres:db123@localhost:5432/inventory?schema=public"
+DATABASE_URL="postgresql://postgres:@dho23@localhost:5432/peninsula?schema=public"
 JWT_SECRET="dfvg5678vgbhnj89"
 PORT=5000
