--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 DATABASE_URL="postgresql://postgres:db123@localhost:5432/inventory?schema=public"
 JWT_SECRET="dfvg5678vgbhnj89"
 PORT=5000
+N8N_COMMAND_PARSER_URL="https://bhargav08.app.n8n.cloud/webhook-test/a9f067bb-6724-472d-9d1a-70b87582250e"
