--- a/backend/package.json
+++ b/backend/package.json
@@ -14,16 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.19.0",
-<<<<<<< HEAD
-    "bcryptjs": "^3.0.3",
-=======
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.7",
->>>>>>> 53cb659029550de5655c831108ba5aece07265df
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
+    "express-rate-limiter": "^1.3.1",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.19.0",
     "zod": "^4.1.12"
