--- a/backend-bckup/package.json
+++ b/backend-bckup/package.json
@@ -21,9 +21,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "prisma": "^6.19.0",
     "zod": "^4.1.12"
-  },
-  "devDependencies": {
-    "prisma": "^6.19.0"
   }
 }
