--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,14 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
+    "seed": "node src/seed.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^10.1.0",
     "@prisma/client": "^6.19.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
