--- a/backend/.env
+++ b/backend/.env
@@ -3,4 +3,4 @@ DATABASE_URL="postgresql://postgres:db123@localhost:5432/inventory?schema=public
 JWT_SECRET="peninsula-super-secure-jwt-secret-2024"
 
 PORT=5000
-N8N_COMMAND_PARSER_URL="https://bhargav08.app.n8n.cloud/webhook-test/a9f067bb-6724-472d-9d1a-70b87582250e"
+ORDER_URL="https://hargav08.app.n8n.cloud/webhook-test/order-status"
